--- a/index.html
+++ b/index.html
@@ -1,12 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>admin page</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <div class="sidebar">
+        <div class="top">
+            <div class="item"><img src="images/view-dashboard.svg" id="dash" alt="">
+            <p>Dashboard</p></div>
+            
+        </div>
+        <div class="mid">
+            <div class="item"><img src="images/home.svg" alt="">
+                <p>Home</p>
+            </div>
+            <div class="item"><img src="images/card-account-details-outline.svg" alt="">
+                <p>Profile</p>
+            </div>
+            <div class="item"><img src="images/history.svg" alt="">
+                <p>History</p>
+            </div>
+            <div class="item"><img src="images/message.svg" alt="">
+                <p>Messages</p>
+            </div>
+            <div class="item"><img src="images/file-multiple.svg" alt="">
+                <p>Tasks</p>
+            </div>
+            <div class="item"><img src="images/account-group.svg" alt="">
+                <p>Communities</p>
+            </div>
+        </div>
+        <div class="bottom">
+            <div class="item"><img src="images/cog.svg" alt="">
+            <p>Settings</p></div>
+            <div class="item"><img src="images/face-agent.svg" alt="">
+            <p>Support</p></div>
+            <div class="item"><img src="images/shield-check.svg" alt="">
+            <p>Privacy</p></div>
+        </div>
+    </div>
+    <div class="header"></div>
+    <div class="content"></div>
 </body>
+
 </html>
