--- a/index.html
+++ b/index.html
@@ -44,7 +44,26 @@
             <p>Privacy</p></div>
         </div>
     </div>
-    <div class="header"></div>
+    <div class="header">
+        <div class="top-part">
+            <div class="left">
+                <div class="search">
+            <img src="images/search.svg"  height="20px" alt="search">
+            <input type="text"></div></div>
+            <div class="right">
+                <div class="prof">
+            <img src="images/notif.svg" height="20px" alt="">
+            <img class="profile" src="images/profile.webp" height="35px" alt="">
+            <span>Morgan Oakley</span></div></div>
+        </div>
+        <div class="bottom-part">
+            <div class="left-bottom">
+            <img class="profile" src="images/profile.webp" height="60px" alt="">
+            <div>Hi there, <br><strong>Morgan Oakley(@morgan)</strong></div></div>
+            <div class="right-bottom">
+            <button class="btns">New</button><button class="btns">Upload</button><button class="btns">Share</button>
+        </div></div>
+    </div>
     <div class="content"></div>
 </body>
 
