projects part done

--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
     <div class="sidebar">
         <div class="top">
             <div class="item"><img src="images/view-dashboard.svg" id="dash" alt="">
-            <p>Dashboard</p></div>
-            
+                <p>Dashboard</p>
+            </div>
+
         </div>
         <div class="mid">
             <div class="item"><img src="images/home.svg" alt="">
@@ -37,34 +38,125 @@
         </div>
         <div class="bottom">
             <div class="item"><img src="images/cog.svg" alt="">
-            <p>Settings</p></div>
+                <p>Settings</p>
+            </div>
             <div class="item"><img src="images/face-agent.svg" alt="">
-            <p>Support</p></div>
+                <p>Support</p>
+            </div>
             <div class="item"><img src="images/shield-check.svg" alt="">
-            <p>Privacy</p></div>
+                <p>Privacy</p>
+            </div>
         </div>
     </div>
     <div class="header">
         <div class="top-part">
             <div class="left">
                 <div class="search">
-            <img src="images/search.svg"  height="20px" alt="search">
-            <input type="text"></div></div>
+                    <img src="images/search.svg" height="20px" alt="search">
+                    <input type="text">
+                </div>
+            </div>
             <div class="right">
                 <div class="prof">
-            <img src="images/notif.svg" height="20px" alt="">
-            <img class="profile" src="images/profile.webp" height="35px" alt="">
-            <span>Morgan Oakley</span></div></div>
+                    <img src="images/notif.svg" height="20px" alt="">
+                    <img class="profile" src="images/profile.webp" height="35px" alt="">
+                    <span>Morgan Oakley</span>
+                </div>
+            </div>
         </div>
         <div class="bottom-part">
             <div class="left-bottom">
-            <img class="profile" src="images/profile.webp" height="60px" alt="">
-            <div>Hi there, <br><strong>Morgan Oakley(@morgan)</strong></div></div>
+                <img class="profile" src="images/profile.webp" height="60px" alt="">
+                <div>Hi there, <br><strong>Morgan Oakley(@morgan)</strong></div>
+            </div>
             <div class="right-bottom">
-            <button class="btns">New</button><button class="btns">Upload</button><button class="btns">Share</button>
-        </div></div>
+                <button class="btns">New</button><button class="btns">Upload</button><button class="btns">Share</button>
+            </div>
+        </div>
     </div>
-    <div class="content"></div>
+    <div class="content">
+        <div class="projects">
+            <h3>Your Projects</h3>
+            <div class="project-card">
+                <div class="text">
+                    <h3>Super Cool Project</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere ducimus odio, accusantium, ad non
+                        nihil, suscipit ex sit placeat sapiente saepe autem illo molestias minima ea? Facilis nemo velit
+                        dolore aut eius.</p>
+                </div>
+                <div class="icons">
+                    <img src="images/star-plus-outline.svg" alt="">
+                    <img src="images/eye-plus-outline.svg" alt="">
+                    <img src="images/source-fork.svg" alt="">
+                </div>
+                
+            </div>
+            <div class="project-card">
+                <div class="text">
+                    <h3>Super Cool Project</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere ducimus odio, accusantium, ad non
+                        nihil, suscipit ex sit placeat sapiente saepe autem illo molestias minima ea? Facilis nemo velit
+                        dolore aut eius.</p>
+                </div>
+                <div class="icons">
+                    <img src="images/star-plus-outline.svg" alt="">
+                    <img src="images/eye-plus-outline.svg" alt="">
+                    <img src="images/source-fork.svg" alt="">
+                </div>
+            </div><div class="project-card">
+                <div class="text">
+                    <h3>Super Cool Project</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere ducimus odio, accusantium, ad non
+                        nihil, suscipit ex sit placeat sapiente saepe autem illo molestias minima ea? Facilis nemo velit
+                        dolore aut eius.</p>
+                </div>
+                <div class="icons">
+                    <img src="images/star-plus-outline.svg" alt="">
+                    <img src="images/eye-plus-outline.svg" alt="">
+                    <img src="images/source-fork.svg" alt="">
+                </div>
+            </div><div class="project-card">
+                <div class="text">
+                    <h3>Super Cool Project</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere ducimus odio, accusantium, ad non
+                        nihil, suscipit ex sit placeat sapiente saepe autem illo molestias minima ea? Facilis nemo velit
+                        dolore aut eius.</p>
+                </div>
+                <div class="icons">
+                    <img src="images/star-plus-outline.svg" alt="">
+                    <img src="images/eye-plus-outline.svg" alt="">
+                    <img src="images/source-fork.svg" alt="">
+                </div>
+
+            </div><div class="project-card">
+                <div class="text">
+                    <h3>Super Cool Project</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere ducimus odio, accusantium, ad non
+                        nihil, suscipit ex sit placeat sapiente saepe autem illo molestias minima ea? Facilis nemo velit
+                        dolore aut eius.</p>
+                </div>
+                <div class="icons">
+                    <img src="images/star-plus-outline.svg" alt="">
+                    <img src="images/eye-plus-outline.svg" alt="">
+                    <img src="images/source-fork.svg" alt="">
+                </div>
+            </div><div class="project-card">
+                <div class="text">
+                    <h3>Super Cool Project</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere ducimus odio, accusantium, ad non
+                        nihil, suscipit ex sit placeat sapiente saepe autem illo molestias minima ea? Facilis nemo velit
+                        dolore aut eius.</p>
+                </div>
+                <div class="icons">
+                    <img src="images/star-plus-outline.svg" alt="">
+                    <img src="images/eye-plus-outline.svg" alt="">
+                    <img src="images/source-fork.svg" alt="">
+                </div>
+            </div>
+        </div>
+        <div class="announcements"></div>
+        <div class="trending"></div>
+    </div>
 </body>
 
 </html>
