--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     </div>
     <div class="content">
         <div class="projects">
-            <h3>Your Projects</h3>
+            <h3 id="head">Your Projects</h3>
             <div class="project-card">
                 <div class="text">
                     <h3>Super Cool Project</h3>
@@ -154,8 +154,41 @@
                 </div>
             </div>
         </div>
-        <div class="announcements"></div>
-        <div class="trending"></div>
+        <div class="announcements">
+            <h3>Announcements</h3>
+            <div class="ann-card">
+                <div class="cont">
+                <h3>Site Maintenance</h3>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repudiandae, ducimus suscipit?</p>
+                <hr></div>
+                <div class="cont">
+                <h3>Community Share Day</h3>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+                <hr></div>
+                <div class="cont">
+                <h3>Updated Privacy Policy</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas perspiciatis sit quos!</p>
+            </div></div>
+        </div>
+        <div class="trending">
+            <h3>Trending</h3>
+            <div class="trend-card">
+                <div class="person">
+                    <img src="images/profile.webp" class="profile" height="40px" alt="">
+                    <div class="name">@tegan <p>World Peace Builder</p></div>
+                </div>
+                <div class="person">
+                    <img src="images/profile.webp" class="profile" height="40px" alt="">
+                    <div class="name">@tegan <p>World Peace Builder</p></div>
+                </div><div class="person">
+                    <img src="images/profile.webp" class="profile" height="40px" alt="">
+                    <div class="name">@tegan <p>World Peace Builder</p></div>
+                </div><div class="person">
+                    <img src="images/profile.webp" class="profile" height="40px" alt="">
+                    <div class="name">@tegan <p>World Peace Builder</p></div>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 
